--- a/speedtest.html
+++ b/speedtest.html
@@ -1759,3 +1759,6 @@
 <HTML><BODY><h1>speedtest, 141.28 Mbit/s
 , 127.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 124.35 Mbit/s
+, 141.28 Mbit/s
+</h1></BODY></HTML>
