--- a/speedtest.html
+++ b/speedtest.html
@@ -1762,3 +1762,6 @@
 <HTML><BODY><h1>speedtest, 124.35 Mbit/s
 , 141.28 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 127.65 Mbit/s
+, 124.35 Mbit/s
+</h1></BODY></HTML>
