--- a/speedtest.html
+++ b/speedtest.html
@@ -1765,3 +1765,6 @@
 <HTML><BODY><h1>speedtest, 127.65 Mbit/s
 , 124.35 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 136.54 Mbit/s
+, 127.65 Mbit/s
+</h1></BODY></HTML>
