--- a/speedtest.html
+++ b/speedtest.html
@@ -1768,3 +1768,6 @@
 <HTML><BODY><h1>speedtest, 136.54 Mbit/s
 , 127.65 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 136.54 Mbit/s
+, 127.65 Mbit/s
+</h1></BODY></HTML>
