--- a/speedtest.html
+++ b/speedtest.html
@@ -1777,3 +1777,6 @@
 <HTML><BODY><h1>speedtest, 122.88 Mbit/s
 , 136.54 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 140.61 Mbit/s
+, 122.88 Mbit/s
+</h1></BODY></HTML>
