--- a/speedtest.html
+++ b/speedtest.html
@@ -1780,3 +1780,6 @@
 <HTML><BODY><h1>speedtest, 140.61 Mbit/s
 , 122.88 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 132.39 Mbit/s
+, 140.61 Mbit/s
+</h1></BODY></HTML>
