--- a/speedtest.html
+++ b/speedtest.html
@@ -1783,3 +1783,6 @@
 <HTML><BODY><h1>speedtest, 132.39 Mbit/s
 , 140.61 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 124.09 Mbit/s
+, 132.39 Mbit/s
+</h1></BODY></HTML>
