--- a/speedtest.html
+++ b/speedtest.html
@@ -1786,3 +1786,6 @@
 <HTML><BODY><h1>speedtest, 124.09 Mbit/s
 , 132.39 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 124.09 Mbit/s
+, 132.39 Mbit/s
+</h1></BODY></HTML>
