--- a/speedtest.html
+++ b/speedtest.html
@@ -1789,3 +1789,6 @@
 <HTML><BODY><h1>speedtest, 124.09 Mbit/s
 , 132.39 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 132.02 Mbit/s
+, 124.09 Mbit/s
+</h1></BODY></HTML>
