--- a/speedtest.html
+++ b/speedtest.html
@@ -1792,3 +1792,6 @@
 <HTML><BODY><h1>speedtest, 132.02 Mbit/s
 , 124.09 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 198.13 Mbit/s
+, 132.02 Mbit/s
+</h1></BODY></HTML>
