--- a/speedtest.html
+++ b/speedtest.html
@@ -1795,3 +1795,6 @@
 <HTML><BODY><h1>speedtest, 198.13 Mbit/s
 , 132.02 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 141.06 Mbit/s
+, 198.13 Mbit/s
+</h1></BODY></HTML>
