--- a/speedtest.html
+++ b/speedtest.html
@@ -1798,3 +1798,6 @@
 <HTML><BODY><h1>speedtest, 141.06 Mbit/s
 , 198.13 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 159.07 Mbit/s
+, 141.06 Mbit/s
+</h1></BODY></HTML>
