--- a/speedtest.html
+++ b/speedtest.html
@@ -1801,3 +1801,6 @@
 <HTML><BODY><h1>speedtest, 159.07 Mbit/s
 , 141.06 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 173.02 Mbit/s
+, 159.07 Mbit/s
+</h1></BODY></HTML>
