--- a/speedtest.html
+++ b/speedtest.html
@@ -1807,3 +1807,6 @@
 <HTML><BODY><h1>speedtest, 173.02 Mbit/s
 , 159.07 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 173.02 Mbit/s
+, 159.07 Mbit/s
+</h1></BODY></HTML>
