--- a/speedtest.html
+++ b/speedtest.html
@@ -1810,3 +1810,6 @@
 <HTML><BODY><h1>speedtest, 173.02 Mbit/s
 , 159.07 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 131.62 Mbit/s
+, 173.02 Mbit/s
+</h1></BODY></HTML>
