--- a/speedtest.html
+++ b/speedtest.html
@@ -1813,3 +1813,6 @@
 <HTML><BODY><h1>speedtest, 131.62 Mbit/s
 , 173.02 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 173.42 Mbit/s
+, 131.62 Mbit/s
+</h1></BODY></HTML>
