--- a/speedtest.html
+++ b/speedtest.html
@@ -1816,3 +1816,6 @@
 <HTML><BODY><h1>speedtest, 173.42 Mbit/s
 , 131.62 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 152.92 Mbit/s
+, 173.42 Mbit/s
+</h1></BODY></HTML>
