--- a/speedtest.html
+++ b/speedtest.html
@@ -1819,3 +1819,6 @@
 <HTML><BODY><h1>speedtest, 152.92 Mbit/s
 , 173.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 28.44 Mbit/s
+, 152.92 Mbit/s
+</h1></BODY></HTML>
