--- a/speedtest.html
+++ b/speedtest.html
@@ -1822,3 +1822,6 @@
 <HTML><BODY><h1>speedtest, 28.44 Mbit/s
 , 152.92 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 1.60 Mbit/s
+, 28.44 Mbit/s
+</h1></BODY></HTML>
