--- a/speedtest.html
+++ b/speedtest.html
@@ -1,3 +1,6 @@
 <HTML><BODY><h1>speedtest, 161.38 Mbit/s
 , 1.43 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 192.57 Mbit/s
+, 161.38 Mbit/s
+</h1></BODY></HTML>
