--- a/speedtest.html
+++ b/speedtest.html
@@ -4,3 +4,6 @@
 <HTML><BODY><h1>speedtest, 192.57 Mbit/s
 , 161.38 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 102.99 Mbit/s
+, 192.57 Mbit/s
+</h1></BODY></HTML>
