--- a/speedtest.html
+++ b/speedtest.html
@@ -10,3 +10,6 @@
 <HTML><BODY><h1>speedtest, 176.24 Mbit/s
 , 102.99 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 176.24 Mbit/s
+, 102.99 Mbit/s
+</h1></BODY></HTML>
