--- a/speedtest.html
+++ b/speedtest.html
@@ -16,3 +16,6 @@
 <HTML><BODY><h1>speedtest, 176.24 Mbit/s
 , 102.99 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.59 Mbit/s
+, 176.24 Mbit/s
+</h1></BODY></HTML>
