--- a/speedtest.html
+++ b/speedtest.html
@@ -19,3 +19,6 @@
 <HTML><BODY><h1>speedtest, 58.59 Mbit/s
 , 176.24 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 224.27 Mbit/s
+, 58.59 Mbit/s
+</h1></BODY></HTML>
