--- a/speedtest.html
+++ b/speedtest.html
@@ -22,3 +22,6 @@
 <HTML><BODY><h1>speedtest, 224.27 Mbit/s
 , 58.59 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 29.69 Mbit/s
+, 224.27 Mbit/s
+</h1></BODY></HTML>
