--- a/speedtest.html
+++ b/speedtest.html
@@ -25,3 +25,6 @@
 <HTML><BODY><h1>speedtest, 29.69 Mbit/s
 , 224.27 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 88.53 Mbit/s
+, 29.69 Mbit/s
+</h1></BODY></HTML>
