--- a/speedtest.html
+++ b/speedtest.html
@@ -31,3 +31,6 @@
 <HTML><BODY><h1>speedtest, 88.53 Mbit/s
 , 29.69 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 38.80 Mbit/s
+, 88.53 Mbit/s
+</h1></BODY></HTML>
