--- a/speedtest.html
+++ b/speedtest.html
@@ -34,3 +34,6 @@
 <HTML><BODY><h1>speedtest, 38.80 Mbit/s
 , 88.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 39.02 Mbit/s
+, 38.80 Mbit/s
+</h1></BODY></HTML>
