--- a/speedtest.html
+++ b/speedtest.html
@@ -37,3 +37,6 @@
 <HTML><BODY><h1>speedtest, 39.02 Mbit/s
 , 38.80 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 195.09 Mbit/s
+, 39.02 Mbit/s
+</h1></BODY></HTML>
