--- a/speedtest.html
+++ b/speedtest.html
@@ -40,3 +40,6 @@
 <HTML><BODY><h1>speedtest, 195.09 Mbit/s
 , 39.02 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 179.53 Mbit/s
+, 195.09 Mbit/s
+</h1></BODY></HTML>
