--- a/speedtest.html
+++ b/speedtest.html
@@ -43,3 +43,6 @@
 <HTML><BODY><h1>speedtest, 179.53 Mbit/s
 , 195.09 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.39 Mbit/s
+, 179.53 Mbit/s
+</h1></BODY></HTML>
