--- a/speedtest.html
+++ b/speedtest.html
@@ -49,3 +49,6 @@
 <HTML><BODY><h1>speedtest, 48.39 Mbit/s
 , 179.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.39 Mbit/s
+, 179.53 Mbit/s
+</h1></BODY></HTML>
