--- a/speedtest.html
+++ b/speedtest.html
@@ -55,3 +55,6 @@
 <HTML><BODY><h1>speedtest, 177.89 Mbit/s
 , 48.39 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 37.36 Mbit/s
+, 177.89 Mbit/s
+</h1></BODY></HTML>
