--- a/speedtest.html
+++ b/speedtest.html
@@ -58,3 +58,6 @@
 <HTML><BODY><h1>speedtest, 37.36 Mbit/s
 , 177.89 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 157.38 Mbit/s
+, 37.36 Mbit/s
+</h1></BODY></HTML>
