--- a/speedtest.html
+++ b/speedtest.html
@@ -61,3 +61,6 @@
 <HTML><BODY><h1>speedtest, 157.38 Mbit/s
 , 37.36 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 37.49 Mbit/s
+, 157.38 Mbit/s
+</h1></BODY></HTML>
