--- a/speedtest.html
+++ b/speedtest.html
@@ -64,3 +64,6 @@
 <HTML><BODY><h1>speedtest, 37.49 Mbit/s
 , 157.38 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 37.49 Mbit/s
+, 157.38 Mbit/s
+</h1></BODY></HTML>
