--- a/speedtest.html
+++ b/speedtest.html
@@ -67,3 +67,6 @@
 <HTML><BODY><h1>speedtest, 37.49 Mbit/s
 , 157.38 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.92 Mbit/s
+, 37.49 Mbit/s
+</h1></BODY></HTML>
