--- a/speedtest.html
+++ b/speedtest.html
@@ -73,3 +73,6 @@
 <HTML><BODY><h1>speedtest, 34.14 Mbit/s
 , 48.92 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.30 Mbit/s
+, 34.14 Mbit/s
+</h1></BODY></HTML>
