--- a/speedtest.html
+++ b/speedtest.html
@@ -76,3 +76,6 @@
 <HTML><BODY><h1>speedtest, 103.30 Mbit/s
 , 34.14 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 121.47 Mbit/s
+, 103.30 Mbit/s
+</h1></BODY></HTML>
