--- a/speedtest.html
+++ b/speedtest.html
@@ -79,3 +79,6 @@
 <HTML><BODY><h1>speedtest, 121.47 Mbit/s
 , 103.30 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 184.13 Mbit/s
+, 121.47 Mbit/s
+</h1></BODY></HTML>
