--- a/speedtest.html
+++ b/speedtest.html
@@ -82,3 +82,6 @@
 <HTML><BODY><h1>speedtest, 184.13 Mbit/s
 , 121.47 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 184.13 Mbit/s
+, 121.47 Mbit/s
+</h1></BODY></HTML>
