--- a/speedtest.html
+++ b/speedtest.html
@@ -88,3 +88,6 @@
 <HTML><BODY><h1>speedtest, 184.13 Mbit/s
 , 121.47 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 207.05 Mbit/s
+, 184.13 Mbit/s
+</h1></BODY></HTML>
