--- a/speedtest.html
+++ b/speedtest.html
@@ -91,3 +91,6 @@
 <HTML><BODY><h1>speedtest, 207.05 Mbit/s
 , 184.13 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 27.14 Mbit/s
+, 207.05 Mbit/s
+</h1></BODY></HTML>
