--- a/speedtest.html
+++ b/speedtest.html
@@ -94,3 +94,6 @@
 <HTML><BODY><h1>speedtest, 27.14 Mbit/s
 , 207.05 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 161.95 Mbit/s
+, 27.14 Mbit/s
+</h1></BODY></HTML>
