--- a/speedtest.html
+++ b/speedtest.html
@@ -97,3 +97,6 @@
 <HTML><BODY><h1>speedtest, 161.95 Mbit/s
 , 27.14 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 40.28 Mbit/s
+, 161.95 Mbit/s
+</h1></BODY></HTML>
