--- a/speedtest.html
+++ b/speedtest.html
@@ -100,3 +100,6 @@
 <HTML><BODY><h1>speedtest, 40.28 Mbit/s
 , 161.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 40.28 Mbit/s
+, 161.95 Mbit/s
+</h1></BODY></HTML>
