--- a/speedtest.html
+++ b/speedtest.html
@@ -103,3 +103,6 @@
 <HTML><BODY><h1>speedtest, 40.28 Mbit/s
 , 161.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 44.91 Mbit/s
+, 40.28 Mbit/s
+</h1></BODY></HTML>
