--- a/speedtest.html
+++ b/speedtest.html
@@ -106,3 +106,6 @@
 <HTML><BODY><h1>speedtest, 44.91 Mbit/s
 , 40.28 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 82.78 Mbit/s
+, 44.91 Mbit/s
+</h1></BODY></HTML>
