--- a/speedtest.html
+++ b/speedtest.html
@@ -109,3 +109,6 @@
 <HTML><BODY><h1>speedtest, 82.78 Mbit/s
 , 44.91 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 135.03 Mbit/s
+, 82.78 Mbit/s
+</h1></BODY></HTML>
