--- a/speedtest.html
+++ b/speedtest.html
@@ -112,3 +112,6 @@
 <HTML><BODY><h1>speedtest, 135.03 Mbit/s
 , 82.78 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 211.43 Mbit/s
+, 135.03 Mbit/s
+</h1></BODY></HTML>
