--- a/speedtest.html
+++ b/speedtest.html
@@ -115,3 +115,6 @@
 <HTML><BODY><h1>speedtest, 211.43 Mbit/s
 , 135.03 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 152.78 Mbit/s
+, 211.43 Mbit/s
+</h1></BODY></HTML>
