--- a/speedtest.html
+++ b/speedtest.html
@@ -118,3 +118,6 @@
 <HTML><BODY><h1>speedtest, 152.78 Mbit/s
 , 211.43 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 152.78 Mbit/s
+, 211.43 Mbit/s
+</h1></BODY></HTML>
