--- a/speedtest.html
+++ b/speedtest.html
@@ -124,3 +124,6 @@
 <HTML><BODY><h1>speedtest, 152.78 Mbit/s
 , 211.43 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 107.76 Mbit/s
+, 152.78 Mbit/s
+</h1></BODY></HTML>
