--- a/speedtest.html
+++ b/speedtest.html
@@ -127,3 +127,6 @@
 <HTML><BODY><h1>speedtest, 107.76 Mbit/s
 , 152.78 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 174.76 Mbit/s
+, 107.76 Mbit/s
+</h1></BODY></HTML>
