--- a/speedtest.html
+++ b/speedtest.html
@@ -130,3 +130,6 @@
 <HTML><BODY><h1>speedtest, 174.76 Mbit/s
 , 107.76 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 127.05 Mbit/s
+, 174.76 Mbit/s
+</h1></BODY></HTML>
