--- a/speedtest.html
+++ b/speedtest.html
@@ -133,3 +133,6 @@
 <HTML><BODY><h1>speedtest, 127.05 Mbit/s
 , 174.76 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 141.13 Mbit/s
+, 127.05 Mbit/s
+</h1></BODY></HTML>
