--- a/speedtest.html
+++ b/speedtest.html
@@ -136,3 +136,6 @@
 <HTML><BODY><h1>speedtest, 141.13 Mbit/s
 , 127.05 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 141.13 Mbit/s
+, 127.05 Mbit/s
+</h1></BODY></HTML>
