--- a/speedtest.html
+++ b/speedtest.html
@@ -139,3 +139,6 @@
 <HTML><BODY><h1>speedtest, 141.13 Mbit/s
 , 127.05 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 121.54 Mbit/s
+, 141.13 Mbit/s
+</h1></BODY></HTML>
