--- a/speedtest.html
+++ b/speedtest.html
@@ -142,3 +142,6 @@
 <HTML><BODY><h1>speedtest, 121.54 Mbit/s
 , 141.13 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 130.95 Mbit/s
+, 121.54 Mbit/s
+</h1></BODY></HTML>
