--- a/speedtest.html
+++ b/speedtest.html
@@ -145,3 +145,6 @@
 <HTML><BODY><h1>speedtest, 130.95 Mbit/s
 , 121.54 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 142.07 Mbit/s
+, 130.95 Mbit/s
+</h1></BODY></HTML>
