--- a/speedtest.html
+++ b/speedtest.html
@@ -148,3 +148,6 @@
 <HTML><BODY><h1>speedtest, 142.07 Mbit/s
 , 130.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 123.28 Mbit/s
+, 142.07 Mbit/s
+</h1></BODY></HTML>
