--- a/speedtest.html
+++ b/speedtest.html
@@ -151,3 +151,6 @@
 <HTML><BODY><h1>speedtest, 123.28 Mbit/s
 , 142.07 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 181.20 Mbit/s
+, 123.28 Mbit/s
+</h1></BODY></HTML>
