--- a/speedtest.html
+++ b/speedtest.html
@@ -160,3 +160,6 @@
 <HTML><BODY><h1>speedtest, 181.20 Mbit/s
 , 123.28 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 2.04 Mbit/s
+, 181.20 Mbit/s
+</h1></BODY></HTML>
