--- a/speedtest.html
+++ b/speedtest.html
@@ -163,3 +163,6 @@
 <HTML><BODY><h1>speedtest, 2.04 Mbit/s
 , 181.20 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 142.77 Mbit/s
+, 2.04 Mbit/s
+</h1></BODY></HTML>
