--- a/speedtest.html
+++ b/speedtest.html
@@ -166,3 +166,6 @@
 <HTML><BODY><h1>speedtest, 142.77 Mbit/s
 , 2.04 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 157.95 Mbit/s
+, 142.77 Mbit/s
+</h1></BODY></HTML>
