--- a/speedtest.html
+++ b/speedtest.html
@@ -169,3 +169,6 @@
 <HTML><BODY><h1>speedtest, 157.95 Mbit/s
 , 142.77 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.90 Mbit/s
+, 157.95 Mbit/s
+</h1></BODY></HTML>
