--- a/speedtest.html
+++ b/speedtest.html
@@ -172,3 +172,6 @@
 <HTML><BODY><h1>speedtest, 87.90 Mbit/s
 , 157.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.90 Mbit/s
+, 157.95 Mbit/s
+</h1></BODY></HTML>
