--- a/speedtest.html
+++ b/speedtest.html
@@ -175,3 +175,6 @@
 <HTML><BODY><h1>speedtest, 87.90 Mbit/s
 , 157.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 175.11 Mbit/s
+, 87.90 Mbit/s
+</h1></BODY></HTML>
