--- a/speedtest.html
+++ b/speedtest.html
@@ -178,3 +178,6 @@
 <HTML><BODY><h1>speedtest, 175.11 Mbit/s
 , 87.90 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 202.85 Mbit/s
+, 175.11 Mbit/s
+</h1></BODY></HTML>
