--- a/speedtest.html
+++ b/speedtest.html
@@ -181,3 +181,6 @@
 <HTML><BODY><h1>speedtest, 202.85 Mbit/s
 , 175.11 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 129.43 Mbit/s
+, 202.85 Mbit/s
+</h1></BODY></HTML>
