--- a/speedtest.html
+++ b/speedtest.html
@@ -193,3 +193,6 @@
 <HTML><BODY><h1>speedtest, 105.54 Mbit/s
 , 139.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 105.54 Mbit/s
+, 139.95 Mbit/s
+</h1></BODY></HTML>
