--- a/speedtest.html
+++ b/speedtest.html
@@ -196,3 +196,6 @@
 <HTML><BODY><h1>speedtest, 105.54 Mbit/s
 , 139.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 120.99 Mbit/s
+, 105.54 Mbit/s
+</h1></BODY></HTML>
