--- a/speedtest.html
+++ b/speedtest.html
@@ -199,3 +199,6 @@
 <HTML><BODY><h1>speedtest, 120.99 Mbit/s
 , 105.54 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 137.11 Mbit/s
+, 120.99 Mbit/s
+</h1></BODY></HTML>
