--- a/speedtest.html
+++ b/speedtest.html
@@ -202,3 +202,6 @@
 <HTML><BODY><h1>speedtest, 137.11 Mbit/s
 , 120.99 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 145.36 Mbit/s
+, 137.11 Mbit/s
+</h1></BODY></HTML>
