--- a/speedtest.html
+++ b/speedtest.html
@@ -208,3 +208,6 @@
 <HTML><BODY><h1>speedtest, 148.29 Mbit/s
 , 145.36 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 148.29 Mbit/s
+, 145.36 Mbit/s
+</h1></BODY></HTML>
