--- a/speedtest.html
+++ b/speedtest.html
@@ -214,3 +214,6 @@
 <HTML><BODY><h1>speedtest, 188.22 Mbit/s
 , 148.29 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 182.27 Mbit/s
+, 188.22 Mbit/s
+</h1></BODY></HTML>
