--- a/speedtest.html
+++ b/speedtest.html
@@ -217,3 +217,6 @@
 <HTML><BODY><h1>speedtest, 182.27 Mbit/s
 , 188.22 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 62.41 Mbit/s
+, 182.27 Mbit/s
+</h1></BODY></HTML>
