--- a/speedtest.html
+++ b/speedtest.html
@@ -220,3 +220,6 @@
 <HTML><BODY><h1>speedtest, 62.41 Mbit/s
 , 182.27 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 208.29 Mbit/s
+, 62.41 Mbit/s
+</h1></BODY></HTML>
