--- a/speedtest.html
+++ b/speedtest.html
@@ -223,3 +223,6 @@
 <HTML><BODY><h1>speedtest, 208.29 Mbit/s
 , 62.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 203.65 Mbit/s
+, 208.29 Mbit/s
+</h1></BODY></HTML>
