--- a/speedtest.html
+++ b/speedtest.html
@@ -229,3 +229,6 @@
 <HTML><BODY><h1>speedtest, 203.65 Mbit/s
 , 208.29 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 203.65 Mbit/s
+, 208.29 Mbit/s
+</h1></BODY></HTML>
