--- a/speedtest.html
+++ b/speedtest.html
@@ -235,3 +235,6 @@
 <HTML><BODY><h1>speedtest, 196.92 Mbit/s
 , 203.65 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 201.26 Mbit/s
+, 196.92 Mbit/s
+</h1></BODY></HTML>
