--- a/speedtest.html
+++ b/speedtest.html
@@ -238,3 +238,6 @@
 <HTML><BODY><h1>speedtest, 201.26 Mbit/s
 , 196.92 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 42.26 Mbit/s
+, 201.26 Mbit/s
+</h1></BODY></HTML>
