--- a/speedtest.html
+++ b/speedtest.html
@@ -244,3 +244,6 @@
 <HTML><BODY><h1>speedtest, 184.90 Mbit/s
 , 42.26 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 184.90 Mbit/s
+, 42.26 Mbit/s
+</h1></BODY></HTML>
