--- a/speedtest.html
+++ b/speedtest.html
@@ -247,3 +247,6 @@
 <HTML><BODY><h1>speedtest, 184.90 Mbit/s
 , 42.26 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 193.01 Mbit/s
+, 184.90 Mbit/s
+</h1></BODY></HTML>
