--- a/speedtest.html
+++ b/speedtest.html
@@ -250,3 +250,6 @@
 <HTML><BODY><h1>speedtest, 193.01 Mbit/s
 , 184.90 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 208.21 Mbit/s
+, 193.01 Mbit/s
+</h1></BODY></HTML>
