--- a/speedtest.html
+++ b/speedtest.html
@@ -253,3 +253,6 @@
 <HTML><BODY><h1>speedtest, 208.21 Mbit/s
 , 193.01 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 204.17 Mbit/s
+, 208.21 Mbit/s
+</h1></BODY></HTML>
