--- a/speedtest.html
+++ b/speedtest.html
@@ -256,3 +256,6 @@
 <HTML><BODY><h1>speedtest, 204.17 Mbit/s
 , 208.21 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 228.66 Mbit/s
+, 204.17 Mbit/s
+</h1></BODY></HTML>
