--- a/speedtest.html
+++ b/speedtest.html
@@ -259,3 +259,6 @@
 <HTML><BODY><h1>speedtest, 228.66 Mbit/s
 , 204.17 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 83.25 Mbit/s
+, 228.66 Mbit/s
+</h1></BODY></HTML>
