--- a/speedtest.html
+++ b/speedtest.html
@@ -262,3 +262,6 @@
 <HTML><BODY><h1>speedtest, 83.25 Mbit/s
 , 228.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 83.25 Mbit/s
+, 228.66 Mbit/s
+</h1></BODY></HTML>
