--- a/speedtest.html
+++ b/speedtest.html
@@ -265,3 +265,6 @@
 <HTML><BODY><h1>speedtest, 83.25 Mbit/s
 , 228.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 141.33 Mbit/s
+, 83.25 Mbit/s
+</h1></BODY></HTML>
