--- a/speedtest.html
+++ b/speedtest.html
@@ -268,3 +268,6 @@
 <HTML><BODY><h1>speedtest, 141.33 Mbit/s
 , 83.25 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 165.42 Mbit/s
+, 141.33 Mbit/s
+</h1></BODY></HTML>
