--- a/speedtest.html
+++ b/speedtest.html
@@ -271,3 +271,6 @@
 <HTML><BODY><h1>speedtest, 165.42 Mbit/s
 , 141.33 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 201.52 Mbit/s
+, 165.42 Mbit/s
+</h1></BODY></HTML>
