--- a/speedtest.html
+++ b/speedtest.html
@@ -277,3 +277,6 @@
 <HTML><BODY><h1>speedtest, 135.96 Mbit/s
 , 201.52 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 135.96 Mbit/s
+, 201.52 Mbit/s
+</h1></BODY></HTML>
