--- a/speedtest.html
+++ b/speedtest.html
@@ -280,3 +280,6 @@
 <HTML><BODY><h1>speedtest, 135.96 Mbit/s
 , 201.52 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 137.41 Mbit/s
+, 135.96 Mbit/s
+</h1></BODY></HTML>
