--- a/speedtest.html
+++ b/speedtest.html
@@ -283,3 +283,6 @@
 <HTML><BODY><h1>speedtest, 137.41 Mbit/s
 , 135.96 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 155.19 Mbit/s
+, 137.41 Mbit/s
+</h1></BODY></HTML>
