--- a/speedtest.html
+++ b/speedtest.html
@@ -286,3 +286,6 @@
 <HTML><BODY><h1>speedtest, 155.19 Mbit/s
 , 137.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.08 Mbit/s
+, 155.19 Mbit/s
+</h1></BODY></HTML>
