--- a/speedtest.html
+++ b/speedtest.html
@@ -289,3 +289,6 @@
 <HTML><BODY><h1>speedtest, 87.08 Mbit/s
 , 155.19 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 139.53 Mbit/s
+, 87.08 Mbit/s
+</h1></BODY></HTML>
