--- a/speedtest.html
+++ b/speedtest.html
@@ -292,3 +292,6 @@
 <HTML><BODY><h1>speedtest, 139.53 Mbit/s
 , 87.08 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 161.49 Mbit/s
+, 139.53 Mbit/s
+</h1></BODY></HTML>
