--- a/speedtest.html
+++ b/speedtest.html
@@ -301,3 +301,6 @@
 <HTML><BODY><h1>speedtest, 161.49 Mbit/s
 , 139.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 120.95 Mbit/s
+, 161.49 Mbit/s
+</h1></BODY></HTML>
