--- a/speedtest.html
+++ b/speedtest.html
@@ -304,3 +304,6 @@
 <HTML><BODY><h1>speedtest, 120.95 Mbit/s
 , 161.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 136.42 Mbit/s
+, 120.95 Mbit/s
+</h1></BODY></HTML>
