--- a/speedtest.html
+++ b/speedtest.html
@@ -307,3 +307,6 @@
 <HTML><BODY><h1>speedtest, 136.42 Mbit/s
 , 120.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 143.21 Mbit/s
+, 136.42 Mbit/s
+</h1></BODY></HTML>
