--- a/speedtest.html
+++ b/speedtest.html
@@ -310,3 +310,6 @@
 <HTML><BODY><h1>speedtest, 143.21 Mbit/s
 , 136.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 192.53 Mbit/s
+, 143.21 Mbit/s
+</h1></BODY></HTML>
