--- a/speedtest.html
+++ b/speedtest.html
@@ -313,3 +313,6 @@
 <HTML><BODY><h1>speedtest, 192.53 Mbit/s
 , 143.21 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 192.53 Mbit/s
+, 143.21 Mbit/s
+</h1></BODY></HTML>
