--- a/speedtest.html
+++ b/speedtest.html
@@ -316,3 +316,6 @@
 <HTML><BODY><h1>speedtest, 192.53 Mbit/s
 , 143.21 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 1.66 Mbit/s
+, 192.53 Mbit/s
+</h1></BODY></HTML>
