--- a/speedtest.html
+++ b/speedtest.html
@@ -319,3 +319,6 @@
 <HTML><BODY><h1>speedtest, 1.66 Mbit/s
 , 192.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 219.33 Mbit/s
+, 1.66 Mbit/s
+</h1></BODY></HTML>
