--- a/speedtest.html
+++ b/speedtest.html
@@ -322,3 +322,6 @@
 <HTML><BODY><h1>speedtest, 219.33 Mbit/s
 , 1.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 187.42 Mbit/s
+, 219.33 Mbit/s
+</h1></BODY></HTML>
