--- a/speedtest.html
+++ b/speedtest.html
@@ -325,3 +325,6 @@
 <HTML><BODY><h1>speedtest, 187.42 Mbit/s
 , 219.33 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 189.42 Mbit/s
+, 187.42 Mbit/s
+</h1></BODY></HTML>
