--- a/speedtest.html
+++ b/speedtest.html
@@ -334,3 +334,6 @@
 <HTML><BODY><h1>speedtest, 196.09 Mbit/s
 , 189.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 196.09 Mbit/s
+, 189.42 Mbit/s
+</h1></BODY></HTML>
