--- a/speedtest.html
+++ b/speedtest.html
@@ -337,3 +337,6 @@
 <HTML><BODY><h1>speedtest, 196.09 Mbit/s
 , 189.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 170.22 Mbit/s
+, 196.09 Mbit/s
+</h1></BODY></HTML>
