--- a/speedtest.html
+++ b/speedtest.html
@@ -340,3 +340,6 @@
 <HTML><BODY><h1>speedtest, 170.22 Mbit/s
 , 196.09 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 99.70 Mbit/s
+, 170.22 Mbit/s
+</h1></BODY></HTML>
