--- a/speedtest.html
+++ b/speedtest.html
@@ -343,3 +343,6 @@
 <HTML><BODY><h1>speedtest, 99.70 Mbit/s
 , 170.22 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 92.68 Mbit/s
+, 99.70 Mbit/s
+</h1></BODY></HTML>
