--- a/speedtest.html
+++ b/speedtest.html
@@ -346,3 +346,6 @@
 <HTML><BODY><h1>speedtest, 92.68 Mbit/s
 , 99.70 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 30.44 Mbit/s
+, 92.68 Mbit/s
+</h1></BODY></HTML>
