--- a/speedtest.html
+++ b/speedtest.html
@@ -349,3 +349,6 @@
 <HTML><BODY><h1>speedtest, 30.44 Mbit/s
 , 92.68 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 30.44 Mbit/s
+, 92.68 Mbit/s
+</h1></BODY></HTML>
