--- a/speedtest.html
+++ b/speedtest.html
@@ -352,3 +352,6 @@
 <HTML><BODY><h1>speedtest, 30.44 Mbit/s
 , 92.68 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 174.27 Mbit/s
+, 30.44 Mbit/s
+</h1></BODY></HTML>
