--- a/speedtest.html
+++ b/speedtest.html
@@ -355,3 +355,6 @@
 <HTML><BODY><h1>speedtest, 174.27 Mbit/s
 , 30.44 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 147.85 Mbit/s
+, 174.27 Mbit/s
+</h1></BODY></HTML>
