--- a/speedtest.html
+++ b/speedtest.html
@@ -358,3 +358,6 @@
 <HTML><BODY><h1>speedtest, 147.85 Mbit/s
 , 174.27 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.61 Mbit/s
+, 147.85 Mbit/s
+</h1></BODY></HTML>
