--- a/speedtest.html
+++ b/speedtest.html
@@ -361,3 +361,6 @@
 <HTML><BODY><h1>speedtest, 103.61 Mbit/s
 , 147.85 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 128.53 Mbit/s
+, 103.61 Mbit/s
+</h1></BODY></HTML>
