--- a/speedtest.html
+++ b/speedtest.html
@@ -370,3 +370,9 @@
 <HTML><BODY><h1>speedtest, 128.53 Mbit/s
 , 103.61 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 128.53 Mbit/s
+, 103.61 Mbit/s
+</h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 138.81 Mbit/s
+, 128.53 Mbit/s
+</h1></BODY></HTML>
