--- a/speedtest.html
+++ b/speedtest.html
@@ -376,3 +376,6 @@
 <HTML><BODY><h1>speedtest, 138.81 Mbit/s
 , 128.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 102.17 Mbit/s
+, 109.70 Mbit/s
+</h1></BODY></HTML>
