--- a/speedtest.html
+++ b/speedtest.html
@@ -379,3 +379,6 @@
 <HTML><BODY><h1>speedtest, 102.17 Mbit/s
 , 109.70 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 102.17 Mbit/s
+, 109.70 Mbit/s
+</h1></BODY></HTML>
