--- a/speedtest.html
+++ b/speedtest.html
@@ -385,3 +385,6 @@
 <HTML><BODY><h1>speedtest, 155.43 Mbit/s
 , 102.17 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 146.30 Mbit/s
+, 155.43 Mbit/s
+</h1></BODY></HTML>
