--- a/speedtest.html
+++ b/speedtest.html
@@ -388,3 +388,6 @@
 <HTML><BODY><h1>speedtest, 146.30 Mbit/s
 , 155.43 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 79.56 Mbit/s
+, 146.30 Mbit/s
+</h1></BODY></HTML>
