--- a/speedtest.html
+++ b/speedtest.html
@@ -391,3 +391,6 @@
 <HTML><BODY><h1>speedtest, 79.56 Mbit/s
 , 146.30 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 138.47 Mbit/s
+, 79.56 Mbit/s
+</h1></BODY></HTML>
