--- a/speedtest.html
+++ b/speedtest.html
@@ -397,3 +397,6 @@
 <HTML><BODY><h1>speedtest, 139.81 Mbit/s
 , 138.47 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 139.81 Mbit/s
+, 138.47 Mbit/s
+</h1></BODY></HTML>
