--- a/speedtest.html
+++ b/speedtest.html
@@ -403,3 +403,6 @@
 <HTML><BODY><h1>speedtest, 139.81 Mbit/s
 , 138.47 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 114.66 Mbit/s
+, 139.81 Mbit/s
+</h1></BODY></HTML>
