--- a/speedtest.html
+++ b/speedtest.html
@@ -406,3 +406,6 @@
 <HTML><BODY><h1>speedtest, 114.66 Mbit/s
 , 139.81 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 139.14 Mbit/s
+, 114.66 Mbit/s
+</h1></BODY></HTML>
