--- a/speedtest.html
+++ b/speedtest.html
@@ -409,3 +409,6 @@
 <HTML><BODY><h1>speedtest, 139.14 Mbit/s
 , 114.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 128.02 Mbit/s
+, 139.14 Mbit/s
+</h1></BODY></HTML>
